# ray_tracer

./: .gitignore  Cargo.toml  README.md  test_image_5-2.ppm
src/: camera.rs  constants.rs  hit.rs  main.rs  ray.rs  vec3.rs
